--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,10 @@
 
       </article>
 
+      <footer class="footer">
+        <p><strong> Mundo juegos 2022</strong></p>
+      </footer>
+
 
     
 </body>
