--- a/html/nintendo-critica.html
+++ b/html/nintendo-critica.html
@@ -60,20 +60,24 @@
         <br>
         <br>
 
-        <ol class="custom-counter">
-          <li>Puntuación media ⭐⭐⭐⭐</li>
-          <li>Jugabilidad ⭐⭐⭐⭐</li>
-          <li>Sonido ⭐⭐⭐</li>
-          <li>Gráficos ⭐⭐⭐</li>
-          <li>Originalidad ⭐⭐⭐</li>
-        </ol>
-
-
-
-      </article>
-    
-      <br>
-
-
-</body>
-</html>
+        <div class="position-list">
+          <ol class="custom-counter">
+            <li>Puntuación media ⭐⭐⭐⭐</li>
+            <li>Jugabilidad ⭐⭐⭐⭐</li>
+            <li>Sonido ⭐⭐⭐</li>
+            <li>Gráficos ⭐⭐⭐</li>
+            <li>Originalidad ⭐⭐⭐</li>
+          </ol>
+        </div>
+  
+  
+  
+        </article>
+      
+        <br>
+  
+        <footer class="footer">
+          <p><strong> Mundo juegos 2022</strong></p>
+        </footer>
+  </body>
+  </html>
