modificacion footer, z-index, iconos redes

--- a/html/pc-critica.html
+++ b/html/pc-critica.html
@@ -60,7 +60,7 @@
         </article>
   
         <footer class="footer">
-          <p><strong> Mundo juegos 2022</strong></p>
+          <p><strong> Mundo juegos © <spam>2022</spam> - Made with ❤️</strong></p>
         </footer>
       
   </body>
