--- a/html/nintendo-critica.html
+++ b/html/nintendo-critica.html
@@ -77,7 +77,7 @@
         <br>
   
         <footer class="footer">
-          <p><strong> Mundo juegos 2022</strong></p>
+          <p><strong> Mundo juegos © <spam>2022</spam> - Made with ❤️</strong></p>
         </footer>
   </body>
   </html>
