--- a/html/nintendo.html
+++ b/html/nintendo.html
@@ -109,7 +109,7 @@
 
       </article>
       <footer class="footer">
-        <p><strong> Mundo juegos 2022</strong></p>
+        <p><strong> Mundo juegos © <spam>2022</spam> - Made with ❤️</strong></p>
       </footer>
     
 </body>
