--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <body>
 <!--Tiene que tener tablas, DIVISIONES y listas e imagenes-->
     <section>
-        <span class="uppercase">mundo juegos</span>
+        <div class="uppercase"><span>mundo juegos<span></div>
       </section>
       <header>
         <h1>Mundo juegos</h1>
