--- a/html/pc.html
+++ b/html/pc.html
@@ -32,7 +32,7 @@
             que el personaje cuente en dichas actividades, las cuales aumentan con el tiempo al repetir la tarea una y otra vez.</p>
 
             <div id="button-container">
-                <a href="../html/nintendo-critica.html">
+                <a href="../html/pc-critica.html">
                 <button id="button-critica">Lee la crítica del juego aquí</button>
                 </a>
                 </div>
