puntos del 2 al 10

--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
           <a href="../html/index.html">Inicio</a>
           <a href="../html/nintendo.html">Nintendo</a>
           <a href="../html/pc.html">PC</a>
+          <a href="../html/sobre-nosotros.html">Sobre Nosotros</a>
         </nav>
       </header>
       <article>
