--- a/html/nintendo.html
+++ b/html/nintendo.html
@@ -16,13 +16,16 @@
         <h1 class="grab">Mundo juegos</h1>
         <nav>
             <a href="../html/index.html">Inicio</a>
-            <a href="../html/nintendo.html">Nintendo</a>
-            <a href="../html/pc.html">PC</a>
+          <a href="../html/nintendo.html">Nintendo</a>
+          <a href="../html/pc.html">PC</a>
+          <a href="../html/sobre-nosotros.html">Sobre Nosotros</a>
         </nav>
       </header>
       <article>
  
         <h1 id="pointer">Nintendo - Animal Crossing  <img src="../img/animal-crossing-gif.gif" width="60px" height="60px"></h1>
+
+        <img class="float-animalcrossing" src="../img/float-animalcrossing.jpg"
 
         <p>Es una serie de videojuegos de simulación de vida publicada por Nintendo. en la que el jugador vive en un pueblo habitado por animales antropomórficos, llevando a cabo diversas actividades.</p>
         <p> La serie destaca por su sistema de juego abierto y su amplio uso del reloj y el calendario interno en el sistema para simular el paso real del tiempo, 
