--- a/html/nintendo-critica.html
+++ b/html/nintendo-critica.html
@@ -16,9 +16,10 @@
       <header>
         <h1>Mundo juegos</h1>
         <nav>
-            <a href="../html/index.html">Inicio</a>
-            <a href="../html/nintendo.html">Nintendo</a>
-            <a href="../html/pc.html">PC</a>
+          <a href="../html/index.html">Inicio</a>
+          <a href="../html/nintendo.html">Nintendo</a>
+          <a href="../html/pc.html">PC</a>
+          <a href="../html/sobre-nosotros.html">Sobre Nosotros</a>
         </nav>
       </header>
       <article>
