pseudo elemento first letter

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
 
         </div>
         
-        <p>Una de las páginas de videojuegos más importantes de habla hispana. En ella abordamos tanto juegos de <b>Nintendo</b> como de <b>PC</b>.</p>
+        <p class="subrayado">Una de las páginas de videojuegos más importantes de habla hispana. En ella abordamos tanto juegos de <b>Nintendo</b> como de <b>PC</b>.</p>
         <p>Navega a través del menú, para acceder a los contenidos disponibles. Tenemos una selección de juegos muy grande que se puede consultar
            caso quieras alguna recomendación.
         </p>
