--- a/html/nintendo-critica.html
+++ b/html/nintendo-critica.html
@@ -16,17 +16,17 @@
       <header>
         <h1>Mundo juegos</h1>
         <nav>
-          <a href="../html/index.html">Inicio</a>
-          <a href="../html/nintendo.html">Nintendo</a>
-          <a href="../html/pc.html">PC</a>
-          <a href="../html/sobre-nosotros.html">Sobre Nosotros</a>
+            <a href="../html/index.html">Inicio</a>
+            <a href="../html/nintendo.html">Nintendo</a>
+            <a href="../html/pc.html">PC</a>
+            <a href="../html/sobre-nosotros.html">Sobre Nosotros</a>
         </nav>
       </header>
       <article>
       
         <h1>Animal Crossing: New Horizons - Crítica  <img src="../img/2529-isabellequestion.gif" width="50px" height="50px"></h1>
 
-        <p>De la misma manera que las anteriores entregas, este <b>New Horizons</b> es una experiencia para todos los públicos en la que
+        <p class="subrayado">De la misma manera que las anteriores entregas, este <b>New Horizons</b> es una experiencia para todos los públicos en la que
            los jugadores habitan en una adorable aldea, se relacionan con sus vecinos, construyen y decoran su casa y, en definitiva,
           ven como todo va creciendo poco a poco. Es un juego que funciona en tiempo real, un <i>slow game</i> que se consume de forma
           constante y en sesiones breves</p>
