--- a/html/pc-critica.html
+++ b/html/pc-critica.html
@@ -26,7 +26,7 @@
     
         <h1>Stardew Valley - Crítica <img src="../img/9610-stardewlove.png" width="30px" height="30px"></h1>
         
-        <p>Stardew Valley es uno de los referentes del género de la gestión y simulación. Este juego está 
+        <p class="subrayado">Stardew Valley es uno de los referentes del género de la gestión y simulación. Este juego está 
             enfocado en la gestión de una granja que te ha dejado tu abuelo como herencia en Pelicano Town.
             Empezarás con una granja bastante descuidada y tendrás que convertirte en todo un referente en la zona.</p>
 
