--- a/html/pc.html
+++ b/html/pc.html
@@ -26,7 +26,7 @@
     <article>
         <h1>PC - Stardew Valley <img src="../img/6701-stardewjunimo.png" width="30px" height="30px"></h1>
 
-        <img class="float-stardew" src="../img/float-stardew.webp" <p>Stardew Valley es un videojuego indie de
+        <img class="float-stardew" src="../img/float-stardew.webp"> <p class="subrayado">Stardew Valley es un videojuego indie de
         simulación de granja desarrollado por <i>Eric "ConcernedApe" Barone</i> y publicado por <i>Chucklefish Games</i>
         (Actualmente por ConcernedApe).</p>
         <p>El juego se lanzó en primer lugar para Windows el 26 de febrero de 2016, y luego para los sistemas operativos
