pseudo elemento first letter

--- a/html/nintendo.html
+++ b/html/nintendo.html
@@ -25,9 +25,9 @@
  
         <h1 id="pointer">Nintendo - Animal Crossing  <img src="../img/animal-crossing-gif.gif" width="60px" height="60px"></h1>
 
-        <img class="float-animalcrossing" src="../img/float-animalcrossing.jpg"
+        <img class="float-animalcrossing" src="../img/float-animalcrossing.jpg">
 
-        <p>Es una serie de videojuegos de simulación de vida publicada por Nintendo. en la que el jugador vive en un pueblo habitado por animales antropomórficos, llevando a cabo diversas actividades.</p>
+        <p class="subrayado">Es una serie de videojuegos de simulación de vida publicada por Nintendo. en la que el jugador vive en un pueblo habitado por animales antropomórficos, llevando a cabo diversas actividades.</p>
         <p> La serie destaca por su sistema de juego abierto y su amplio uso del reloj y el calendario interno en el sistema para simular el paso real del tiempo, 
             es decir, que el juego se desarrolla en tiempo real.</p>
         <p>En total son siete juegos, siendo publicado el primero en 2001, aunque dos de ellos solo en Japón. Hay entregas para <strong>Nintendo Gamecube, Nintendo DS, Wii, Nintendo 3DS y Nintendo Switch.</strong></p>
