pseudo clase nth-of-type

--- a/html/nintendo.html
+++ b/html/nintendo.html
@@ -23,6 +23,7 @@
       </header>
       <article>
  
+        <div id="subrayado-titulos">
         <h1 id="pointer">Nintendo - Animal Crossing  <img src="../img/animal-crossing-gif.gif" width="60px" height="60px"></h1>
 
         <img class="float-animalcrossing" src="../img/float-animalcrossing.jpg">
@@ -40,7 +41,7 @@
             </a>
             </div>
 
-        <h2>Entregas</h2>
+        <h1>Entregas</h1>
         <dl>
             <dt>Entrega para Nintendo 64 y GameCube</dt>
             <dd>▶ El primer juego de la serie fue <strong>Dōbutsu no Mori</strong> Publicado solo en japón, donde salió a la venta el 14 de abril de 2001</dd>
@@ -66,7 +67,7 @@
 
           </dl>
 
-          <h2>Eventos del juego</h2>
+          <h1>Eventos del juego</h1>
 
         <p>La franquicia se caracteriza por el paso del tiempo y el uso de un calendario natural. Por este motivo, los videojuegos
             de Animal Crossing celebran eventos que coinciden con festejos del mundo real, tales como San Valentín o Navidad.</p>
@@ -108,7 +109,7 @@
             </table>
 
         </div>
-        
+    </div>
 
       </article>
       <footer class="footer">
