--- a/html/pc.html
+++ b/html/pc.html
@@ -15,6 +15,7 @@
         <span>MUNDO JUEGOS</span>
     </section>
     <header>
+        
         <h1>Mundo juegos</h1>
         <nav>
             <a href="../html/index.html">Inicio</a>
@@ -24,6 +25,7 @@
         </nav>
     </header>
     <article>
+        <div id="subrayado-titulos">
         <h1>PC - Stardew Valley <img src="../img/6701-stardewjunimo.png" width="30px" height="30px"></h1>
 
         <img class="float-stardew" src="../img/float-stardew.webp"> <p class="subrayado">Stardew Valley es un videojuego indie de
@@ -48,7 +50,7 @@
             </div>
 
 
-            <h2>▶ Plataformas donde está disponible el juego</h2>
+            <h1>▶ Plataformas donde está disponible el juego</h1>
             <ul id="estilo-lista-pc">
 
                 <li><strong>Microsoft Windows</strong></li>
@@ -62,7 +64,7 @@
 
             </ul>
 
-            <h2>Festivales</h2>
+            <h1>Festivales</h1>
             <p>Los Festivales son eventos especiales en Stardew Valley. Cada estación tiene dos festivales.</p>
             <p>El alcalde Lewis mandará al jugador una carta antes de cada festival, diciendo dónde y cuándo será dicho
                 evento. Algunos de ellos son:</p>
@@ -123,7 +125,8 @@
                     </tr>
 
                 </table>
-
+            </div>
+        </div>
 
 
 
