--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -84,6 +84,11 @@
     </div>
 
     </div>
+    <div id="contenedor1">
+      <div id="item1">Instagram<br>@mundo_juegos</div>
+      <div id="item2">Facebook<br> mundo juegos</div>
+      <div id="item3">Twitter<br> @mundo_juegos</div>
+    </div>
 
 
   </article>
