cajitas novedades del juego

--- a/html/nintendo.html
+++ b/html/nintendo.html
@@ -67,6 +67,17 @@
 
           </dl>
 
+          <h1>Novedades del juego</h1>
+
+          <div class="container-principal-novedades-ac">
+            <div class="container-novedades-ac"><p>La importancia de poblar una isla</p></div>
+            <div class="container-novedades-ac"><p>Tendremos muchos vecinos</p></div>
+            <div class="container-novedades-ac"><p>Juega con amigos</p></div>
+            <div class="container-novedades-ac"><p>La diversidad es la clave</p></div>
+            <div class="container-novedades-ac"><p>Se puede elegir la zona donde vives</p></div>
+
+          </div>
+
           <h1>Eventos del juego</h1>
 
         <p>La franquicia se caracteriza por el paso del tiempo y el uso de un calendario natural. Por este motivo, los videojuegos
