--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
         </p>
 
         <br>
-
+         <div></div>
         <div class="center">
         <a href="https://emoji.gg/emoji/8564-yellowgameboycolor"><img src="https://cdn3.emoji.gg/emojis/8564-yellowgameboycolor.gif" width="64px" height="64px" alt="YellowGameboyColor"></a>
        </div>
