propiedad align-selft

--- a/html/pc.html
+++ b/html/pc.html
@@ -64,6 +64,16 @@
 
             </ul>
 
+            <h1>Curiosidades del juego</h1>
+
+            <div class="container-principal-novedades-stardew">
+              <div id="container-novedades-stardew-1"><p> El juego esta inspirado en otro juego de rol y simulación de agricultura llamado Harvest Moon.</p></div>
+              <div id="container-novedades-stardew-2"><p><strong>Fue creado por "concernedape" y publicado por Chucklefish games.</strong> </p></div>
+              <div id="container-novedades-stardew-3"><p> Tambien se inspiro en otro juegos como "Animal crossing", "Rune factory", "Minecraft", Y "Terraria".</p></div>
+  
+            </div>
+          <br>
+
             <h1>Festivales</h1>
             <p>Los Festivales son eventos especiales en Stardew Valley. Cada estación tiene dos festivales.</p>
             <p>El alcalde Lewis mandará al jugador una carta antes de cada festival, diciendo dónde y cuándo será dicho
