--- a/html/nintendo-critica.html
+++ b/html/nintendo-critica.html
@@ -54,9 +54,19 @@
           Es un juego muy agradable y recomendado para todos los públicos.
         </p>
       
-
         <br>
 
+        <h1>Novedades del juego</h1>
+
+          <div class="container-principal-novedades-ac">
+            <div class="container-novedades-ac"><p> La importancia de poblar una isla </p></div><p class="flechas">⇨</p>
+            <div class="container-novedades-ac"><p> Tendremos muchos vecinos </p></div><p class="flechas">⇨</p>
+            <div class="container-novedades-ac"><p> Juega con amigos </p></div><p class="flechas">⇨</p>
+            <div class="container-novedades-ac"><p>Se puede elegir la zona donde vives </p class="flechas"></div>
+
+          </div>
+        <br>
+      
 
         La <b>puntuación final</b> sería la siguiente:
         <br>
