--- a/html/sobre-nosotros.html
+++ b/html/sobre-nosotros.html
@@ -28,7 +28,7 @@
 
 
     <div id="contenedor">
-      <h2>Sobre Nosotros</h2>
+      <h1>Sobre Nosotros</h1>
     </div>
     <div id="columna1">
       <p href="#">
@@ -44,14 +44,17 @@
     <div id="columna2">
 
       <p>
-        Somos un grupo de amigos que comparte una única pasión: los videojuegos. Queríamos convertir de nuestro hobbie
-        un trabajo
-        asique decidimos en invertir nuestro tiempo libre en una página que analizara nuestros juegos favoritos.
+        Somos un grupo de amigos que comparte una única pasión: <strong>los videojuegos</strong>. Queríamos convertir de nuestro hobbie
+        un trabajo por lo que decidimos en invertir nuestro tiempo libre en una página que analizara nuestros juegos favoritos.
       </p>
 
       <p>
         Si te gusta nuestro contenido y quieres apoyarnos, no dudes en seguirnos en nuestras redes sociales. Aceptamos
         donaciones también.
+      </p>
+
+      <p>
+        Las personas que hicieron posible el blog fueron:
       </p>
 
       <p>
@@ -62,16 +65,16 @@
           <div class="card-1">
             <img src="../img/sobre-nosotros-card.jpeg" alt="Avatar" style="width:100%">
             <div class="container">
-              <h4><b>John Doe</b></h4>
-              <p>Architect & Engineer</p>
+              <h4><b>Pedro</b></h4>
+              <p>Periodista y streamer</p>
             </div>
           </div>
 
           <div class="card-1">
             <img src="../img/sobre-nosotros-card-2.webp" alt="Avatar" style="width:100%">
             <div class="container">
-              <h4><b>John Doe</b></h4>
-              <p>Architect & Engineer</p>
+              <h4><b>María</b></h4>
+              <p>Desarrolladora freelance</p>
             </div>
           </div>
         </div>  
@@ -83,12 +86,6 @@
 
     </div>
 
-    </div>
-    <div id="contenedor1">
-      <div id="item1">Instagram<br>@mundo_juegos</div>
-      <div id="item2">Facebook<br> mundo juegos</div>
-      <div id="item3">Twitter<br> @mundo_juegos</div>
-    </div>
 
 
   </article>
